--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="nav-menu">
                     <div class="nav-items">
                         <ul>
-                            <li><a href="#herosec">Home</a></li>
+                            <li><a href="#">Home</a></li>
                             <li><a href="#comp-info">About Us</a></li>
                             <li><a href="#services">Service</a></li>
                             <li><a href="#testimonial">Testimonials</a></li>
@@ -152,7 +152,7 @@
                     <p>Today, the world is nothing with mobile phones. Their presence has transformed the world, and it
                         became a mandatory
                         thing in day-to-day life.</p>
-                    <a href="#"><button id="get-details">Know More</button></a>
+                    <button id="get-details"><a href="#"></a>Know More</a></button>
                 </div>
 
 
@@ -162,7 +162,7 @@
                     <p>Today, the world is nothing with mobile phones. Their presence has transformed the world, and it
                         became a mandatory
                         thing in day-to-day life.</p>
-                    <a href="#"><button id="get-details">Know More</button></a>
+                    <button id="get-details"><a href="#"></a>Know More</a></button>
                 </div>
 
 
@@ -172,7 +172,7 @@
                     <p>Today, the world is nothing with mobile phones. Their presence has transformed the world, and it
                         became a mandatory
                         thing in day-to-day life.</p>
-                    <a href="#"><button id="get-details">Know More</button></a>
+                    <button id="get-details"><a href="#"></a>Know More</a></button>
                 </div>
 
 
@@ -182,7 +182,7 @@
                     <p>Today, the world is nothing with mobile phones. Their presence has transformed the world, and it
                         became a mandatory
                         thing in day-to-day life.</p>
-                    <a href="#"><button id="get-details">Know More</button></a>
+                    <button id="get-details"><a href="#"></a>Know More</a></button>
                 </div>
 
 
@@ -192,7 +192,7 @@
                     <p>Today, the world is nothing with mobile phones. Their presence has transformed the world, and it
                         became a mandatory
                         thing in day-to-day life.</p>
-                    <a href="#"><button id="get-details">Know More</button></a>
+                    <button id="get-details"><a href="#"></a>Know More</a></button>
                 </div>
 
 
@@ -202,7 +202,7 @@
                     <p>Today, the world is nothing with mobile phones. Their presence has transformed the world, and it
                         became a mandatory
                         thing in day-to-day life.</p>
-                    <a href="#"><button id="get-details">Know More</button></a>
+                    <button id="get-details"><a href="#"></a>Know More</a></button>
                 </div>
 
 
@@ -212,7 +212,7 @@
                     <p>Today, the world is nothing with mobile phones. Their presence has transformed the world, and it
                         became a mandatory
                         thing in day-to-day life.</p>
-                    <a href="#"><button id="get-details">Know More</button></a>
+                    <button id="get-details"><a href="#"></a>Know More</a></button>
                 </div>
 
 
@@ -222,7 +222,7 @@
                     <p>Today, the world is nothing with mobile phones. Their presence has transformed the world, and it
                         became a mandatory
                         thing in day-to-day life.</p>
-                    <a href="#"><button id="get-details">Know More</button></a>
+                    <button id="get-details"><a href="#"></a>Know More</a></button>
                 </div>
 
 
@@ -232,7 +232,7 @@
                     <p>Today, the world is nothing with mobile phones. Their presence has transformed the world, and it
                         became a mandatory
                         thing in day-to-day life.</p>
-                    <a href="#"><button id="get-details">Know More</button></a>
+                    <button id="get-details"><a href="#"></a>Know More</a></button>
                 </div>
 
 
@@ -242,7 +242,7 @@
                     <p>Today, the world is nothing with mobile phones. Their presence has transformed the world, and it
                         became a mandatory
                         thing in day-to-day life.</p>
-                    <a href="#"><button id="get-details">Know More</button></a>
+                    <button id="get-details"><a href="#"></a>Know More</a></button>
                 </div>
 
 
@@ -252,7 +252,7 @@
                     <p>Today, the world is nothing with mobile phones. Their presence has transformed the world, and it
                         became a mandatory
                         thing in day-to-day life.</p>
-                    <a href="#"><button id="get-details">Know More</button></a>
+                    <button id="get-details"><a href="#"></a>Know More</a></button>
                 </div>
 
 
@@ -262,7 +262,7 @@
                     <p>Today, the world is nothing with mobile phones. Their presence has transformed the world, and it
                         became a mandatory
                         thing in day-to-day life.</p>
-                    <a href="#"><button id="get-details">Know More</button></a>
+                    <button id="get-details"><a href="#"></a>Know More</a></button>
                 </div>
 
 
@@ -307,7 +307,7 @@
                 <img src="./assets/images/c9.png" alt="client-images">
 
                 <img src="./assets/images/c10.png" alt="client-images">
-                
+
             </div>
 
         </section>
@@ -321,7 +321,7 @@
                     <p>FARIDABAD - OFF - 528 5th Floor Vipul Plaza Sec- 81 faridabad -121002</p>
                     <p><a href="tel:9568222255">+91 95682-22255</a></p>
                     <p><a href="mailto:sales@xcelmarketing.in">sales@xcelmarketing.in</a></p>
-                   
+
                 </div>
 
                 <iframe id="map"
