--- a/index.html
+++ b/index.html
@@ -152,37 +152,34 @@
                     <p>Today, the world is nothing with mobile phones. Their presence has transformed the world, and it
                         became a mandatory
                         thing in day-to-day life.</p>
-                    <button id="get-details"><a href="#"></a>Know More</a></button>
+                    <a href="#"><button id="get-details">Know More</button></a>
                 </div>
 
 
                 <div class="card">
                     <img src="./assets/images/voice.png" alt="Service-image">
                     <h1>Voice Call</h1>
-                    <p>Today, the world is nothing with mobile phones. Their presence has transformed the world, and it
-                        became a mandatory
-                        thing in day-to-day life.</p>
-                    <button id="get-details"><a href="#"></a>Know More</a></button>
+                    <p>Voice Call has become a necessity for all size businesses. With the growing expectation, we plan bulk voice call
+                    campaigns to boost your business.</p>
+                    <a href="#"><button id="get-details">Know More</button></a>
                 </div>
 
 
                 <div class="card">
                     <img src="./assets/images/whatsapp.png" alt="Service-image">
                     <h1>WhatsApp Business</h1>
-                    <p>Today, the world is nothing with mobile phones. Their presence has transformed the world, and it
-                        became a mandatory
-                        thing in day-to-day life.</p>
-                    <button id="get-details"><a href="#"></a>Know More</a></button>
+                    <p>WhatsApp bulk SMS service allows businesses to send promotional or transactional messages to a large audience on
+                    WhatsApp for marketing or informational purposes.</p>
+                    <a href="#"><button id="get-details">Know More</button></a>
                 </div>
 
 
                 <div class="card">
                     <img src="./assets/images/email.png" alt="Service-image">
                     <h1>Emailer</h1>
-                    <p>Today, the world is nothing with mobile phones. Their presence has transformed the world, and it
-                        became a mandatory
-                        thing in day-to-day life.</p>
-                    <button id="get-details"><a href="#"></a>Know More</a></button>
+                    <p>Email Marketing is an effective marketing solution. We intensively formulate the strategy and build a long-lasting
+                    relationship with clients.</p>
+                    <a href="#"><button id="get-details">Know More</button></a>
                 </div>
 
 
@@ -192,27 +189,37 @@
                     <p>Today, the world is nothing with mobile phones. Their presence has transformed the world, and it
                         became a mandatory
                         thing in day-to-day life.</p>
-                    <button id="get-details"><a href="#"></a>Know More</a></button>
+                    <a href="#"><button id="get-details">Know More</button></a>
                 </div>
 
 
                 <div class="card">
-                    <img src="./assets/images/sms.png" alt="Service-image">
+                    <img src="./assets/images/cloudtelephony.png" alt="Service-image">
+                    <h1>Cloud Telephony</h1>
+                    <p>Today, the world is nothing with mobile phones. Their presence has transformed the world, and it
+                        became a mandatory
+                        thing in day-to-day life.</p>
+                    <a href="#"><button id="get-details">Know More</button></a>
+                </div>
+
+
+                <div class="card">
+                    <img src="./assets/images/tollfree.png" alt="Service-image">
                     <h1>Toll Free Number</h1>
                     <p>Today, the world is nothing with mobile phones. Their presence has transformed the world, and it
                         became a mandatory
                         thing in day-to-day life.</p>
-                    <button id="get-details"><a href="#"></a>Know More</a></button>
+                    <a href="#"><button id="get-details">Know More</button></a>
                 </div>
 
 
                 <div class="card">
-                    <img src="./assets/images/sms.png" alt="Service-image">
+                    <img src="./assets/images/PRI.png" alt="Service-image">
                     <h1>PRI</h1>
                     <p>Today, the world is nothing with mobile phones. Their presence has transformed the world, and it
                         became a mandatory
                         thing in day-to-day life.</p>
-                    <button id="get-details"><a href="#"></a>Know More</a></button>
+                    <a href="#"><button id="get-details">Know More</button></a>
                 </div>
 
 
@@ -222,7 +229,7 @@
                     <p>Today, the world is nothing with mobile phones. Their presence has transformed the world, and it
                         became a mandatory
                         thing in day-to-day life.</p>
-                    <button id="get-details"><a href="#"></a>Know More</a></button>
+                    <a href="#"><button id="get-details">Know More</button></a>
                 </div>
 
 
@@ -232,38 +239,30 @@
                     <p>Today, the world is nothing with mobile phones. Their presence has transformed the world, and it
                         became a mandatory
                         thing in day-to-day life.</p>
-                    <button id="get-details"><a href="#"></a>Know More</a></button>
+                    <a href="#"><button id="get-details">Know More</button></a>
                 </div>
 
 
                 <div class="card">
-                    <img src="./assets/images/sms.png" alt="Service-image">
+                    <img src="./assets/images/microsoft.png" alt="Service-image">
                     <h1>Microsoft 365</h1>
                     <p>Today, the world is nothing with mobile phones. Their presence has transformed the world, and it
                         became a mandatory
                         thing in day-to-day life.</p>
-                    <button id="get-details"><a href="#"></a>Know More</a></button>
+                    <a href="#"><button id="get-details">Know More</button></a>
                 </div>
 
 
                 <div class="card">
-                    <img src="./assets/images/sms.png" alt="Service-image">
+                    <img src="./assets/images/google.png" alt="Service-image">
                     <h1>Google WorkSpace</h1>
                     <p>Today, the world is nothing with mobile phones. Their presence has transformed the world, and it
                         became a mandatory
                         thing in day-to-day life.</p>
-                    <button id="get-details"><a href="#"></a>Know More</a></button>
+                    <a href="#"><button id="get-details">Know More</button></a>
                 </div>
 
 
-                <div class="card">
-                    <img src="./assets/images/sms.png" alt="Service-image">
-                    <h1>Bulk SMS</h1>
-                    <p>Today, the world is nothing with mobile phones. Their presence has transformed the world, and it
-                        became a mandatory
-                        thing in day-to-day life.</p>
-                    <button id="get-details"><a href="#"></a>Know More</a></button>
-                </div>
 
 
             </div>
