--- a/index.html
+++ b/index.html
@@ -149,9 +149,8 @@
                 <div class="card">
                     <img src="./assets/images/sms.png" alt="Service-image">
                     <h1>Bulk SMS</h1>
-                    <p>Today, the world is nothing with mobile phones. Their presence has transformed the world, and it
-                        became a mandatory
-                        thing in day-to-day life.</p>
+                    <p>Rapidly reach customers, cost-effective campaigns, personalized communication, increased brand awareness, and real-time
+                    analytics with Xcel Marketing's bulk SMS service.</p>
                     <a href="#"><button id="get-details">Know More</button></a>
                 </div>
 
@@ -186,9 +185,8 @@
                 <div class="card">
                     <img src="./assets/images/missed call.png" alt="Service-image">
                     <h1>Missed Call Service</h1>
-                    <p>Today, the world is nothing with mobile phones. Their presence has transformed the world, and it
-                        became a mandatory
-                        thing in day-to-day life.</p>
+                    <p>Missed Call Service engages customers by having them call a designated number, triggering automated responses or
+                    information delivery.</p>
                     <a href="#"><button id="get-details">Know More</button></a>
                 </div>
 
@@ -196,9 +194,8 @@
                 <div class="card">
                     <img src="./assets/images/cloudtelephony.png" alt="Service-image">
                     <h1>Cloud Telephony</h1>
-                    <p>Today, the world is nothing with mobile phones. Their presence has transformed the world, and it
-                        became a mandatory
-                        thing in day-to-day life.</p>
+                    <p>Cloud Telephony in marketing streamlines communication via virtual phone systems, enhancing customer interactions and
+                    data management for efficient marketing campaigns.</p>
                     <a href="#"><button id="get-details">Know More</button></a>
                 </div>
 
@@ -206,9 +203,8 @@
                 <div class="card">
                     <img src="./assets/images/tollfree.png" alt="Service-image">
                     <h1>Toll Free Number</h1>
-                    <p>Today, the world is nothing with mobile phones. Their presence has transformed the world, and it
-                        became a mandatory
-                        thing in day-to-day life.</p>
+                    <p>Toll-Free Number is a free-to-call contact for customers, boosting accessibility and brand credibility
+                    for inquiries and support.</p>
                     <a href="#"><button id="get-details">Know More</button></a>
                 </div>
 
@@ -216,9 +212,8 @@
                 <div class="card">
                     <img src="./assets/images/PRI.png" alt="Service-image">
                     <h1>PRI</h1>
-                    <p>Today, the world is nothing with mobile phones. Their presence has transformed the world, and it
-                        became a mandatory
-                        thing in day-to-day life.</p>
+                    <p>PRI (Primary Rate Interface) in marketing provides high-capacity digital communication channels for efficient voice and
+                    data transmission, enhancing business connectivity.</p>
                     <a href="#"><button id="get-details">Know More</button></a>
                 </div>
 
@@ -226,9 +221,8 @@
                 <div class="card">
                     <img src="./assets/images/ILL.png" alt="Service-image">
                     <h1>Internet Lease Line (ILL)</h1>
-                    <p>Today, the world is nothing with mobile phones. Their presence has transformed the world, and it
-                        became a mandatory
-                        thing in day-to-day life.</p>
+                    <p>An Internet Lease Line (ILL) is a dedicated, high-speed connection provided by ISPs for businesses, ensuring reliable
+                    and fast internet access.</p>
                     <a href="#"><button id="get-details">Know More</button></a>
                 </div>
 
@@ -236,9 +230,8 @@
                 <div class="card">
                     <img src="./assets/images/cloud.png" alt="Service-image">
                     <h1>Cloud Server</h1>
-                    <p>Today, the world is nothing with mobile phones. Their presence has transformed the world, and it
-                        became a mandatory
-                        thing in day-to-day life.</p>
+                    <p>Cloud Server provides scalable, secure, and accessible hosting for websites and applications, supporting
+                    digital marketing strategies.</p>
                     <a href="#"><button id="get-details">Know More</button></a>
                 </div>
 
@@ -246,9 +239,8 @@
                 <div class="card">
                     <img src="./assets/images/microsoft.png" alt="Service-image">
                     <h1>Microsoft 365</h1>
-                    <p>Today, the world is nothing with mobile phones. Their presence has transformed the world, and it
-                        became a mandatory
-                        thing in day-to-day life.</p>
+                    <p>Microsoft 365 in marketing offers productivity tools like Word and Excel, enabling efficient content creation and
+                    collaboration for marketing campaigns.</p>
                     <a href="#"><button id="get-details">Know More</button></a>
                 </div>
 
@@ -256,9 +248,8 @@
                 <div class="card">
                     <img src="./assets/images/google.png" alt="Service-image">
                     <h1>Google WorkSpace</h1>
-                    <p>Today, the world is nothing with mobile phones. Their presence has transformed the world, and it
-                        became a mandatory
-                        thing in day-to-day life.</p>
+                    <p>Google Workspace in marketing provides cloud-based productivity tools like Gmail and Docs, enhancing collaboration and
+                    communication for efficient marketing operations.</p>
                     <a href="#"><button id="get-details">Know More</button></a>
                 </div>
 
