--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
         <title>Bulk SMS Service provider in india</title>
         <link rel="icon" type="image/x-icon" href="/assets/images/favicon.png">
 
+       
         <link rel="stylesheet" href="./assets/css/main.css">
 
         <link rel="stylesheet" href="./assets/css/responsive.css">
+
 
 
         <script src="https://kit.fontawesome.com/6909acc9e8.js" crossorigin="anonymous"></script>
@@ -312,6 +314,22 @@
                     <p><a href="tel:9568222255">+91 95682-22255</a></p>
                     <p><a href="mailto:sales@xcelmarketing.in">sales@xcelmarketing.in</a></p>
 
+                    <div class="socials">
+                        <div><a href="https://www.facebook.com/marketingxcel" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
+                        </div>
+                        <div><a href="https://twitter.com/marketing_xcel" target="_blank"><i class="fa-brands fa-x-twitter"></i></a></div>
+                        <div><a href="https://www.linkedin.com/company/xcelmarketing/" target="_blank"><i
+                                    class="fa-brands fa-linkedin-in"></i></a></div>
+                        <div><a href="https://www.instagram.com/excelmarketing.in/" target="_blank"><i
+                                    class="fa-brands fa-instagram"></i></a>
+                        </div>
+                        <div><a href="https://in.pinterest.com/XcelMarketing/" target="_blank"><i class="fa-brands fa-pinterest-p"></i></a>
+                        </div>
+                        <div><a href="https://api.whatsapp.com/send?phone=7838130444" target="_blank"><i
+                                    class="fa-brands fa-whatsapp"></i></a>
+                        </div>
+                    </div>
+
                 </div>
 
                 <iframe id="map"
@@ -334,5 +352,7 @@
     </body>
 
     <script src="./assets/scripts/navbar.js"></script>
+
+    <script src="./assets/scripts/submit.js"></script>
 
 </html>
