--- a/thankyou.html
+++ b/thankyou.html
@@ -16,7 +16,7 @@
 
     <body>
         <div class="outer">
-            <img src="./assets/images/check.png" alt="done">
+            <img src="./assets/images/thankimg.gif" alt="done">
             <h1>Thank You!</h1>
             <p>Thank for you showing intrest in Xcel Marketing. We will get back to you as soon as possible.</p>
         </div>
